--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
+body{
+  font-family: 'Inter', sans-serif;
+  margin: 0;
+  background-color: #F4F2EF;
+}
