Base de mapa creada, pendiente de consultar dudas

--- a/src/app/teacher-router/components/map/map.component.html
+++ b/src/app/teacher-router/components/map/map.component.html
@@ -1,1 +1,8 @@
-<p>map works!</p>
+<!DOCTYPE html>
+<html>
+    <body>
+        <div class="mapContainer">
+            
+        </div>
+    </body>
+</html>
