--- a/src/app/teacher-router/pages/admin-home/admin-home.component.html
+++ b/src/app/teacher-router/pages/admin-home/admin-home.component.html
@@ -1,1 +1,20 @@
-<p>admin-home works!</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title></title>
+    </head>
+    <body>
+        <header></header>
+        <div class = "button-container">
+            <input type="button">
+            <input type="button">
+            <input type="button">
+            <input type="button">
+            <input type="button">
+        </div>
+
+        <div class="map-container">
+            <map></map>
+        </div>
+    </body>
+</html>
