--- a/src/app/teacher-router/pages/create-user/create-user.component.html
+++ b/src/app/teacher-router/pages/create-user/create-user.component.html
@@ -1,1 +1,25 @@
-<p>create-user works!</p>
+<!DOCTYPE html>
+<html>
+
+<head>
+
+</head>
+
+<body>
+    <div class="panel">
+        <form>
+            <div>
+                <input type="email">
+                <input type="text">
+                <input type="password">
+            </div>
+
+            <div>
+                <input type="password">
+                <input>
+            </div>
+        </form>
+    </div>
+</body>
+
+</html>
