--- a/src/app/teacher-router/pages/admin-home/admin-home.component.css
+++ b/src/app/teacher-router/pages/admin-home/admin-home.component.css
@@ -1,5 +1,111 @@
 .sidenav-content {
-  width: 40%;
-  height: 100%;
-  border: solid;
+  width: 25%;
+  height: 90vh;
+  background-color: #D33086;
+}
+
+.prueba {
+  margin: 3% 3%;
+  width: 69%;
+}
+
+.buttons {
+  background-color: #ffffff;
+  border: none;
+  color: #ff3a82;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0 5%;
+  cursor: pointer;
+  border-radius: 10px;
+  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
+}
+
+.buttons:hover {
+  background-color: #E0DEDF;
+}
+
+#center-data {
+  height: 73%;
+}
+
+#button-container {
+  margin-top: 3%;
+  height: 21%;
+  margin-bottom: 3%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#main {
+  display: flex;
+  background-color: #d9edf7;
+}
+
+#center-toolbar {
+  height: 15%;
+}
+
+@media only screen and (max-width: 800px) {
+  .sidenav-content {
+    width: 100%;
+  }
+}
+
+.cards {
+  width: 100%;
+  padding: 35px 20px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+}
+.cards .card {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
+}
+.number {
+  font-size: 35px;
+  font-weight: 500;
+  color: #ff3a82;
+}
+.card-name {
+  color: #888;
+  font-weight: 600;
+}
+
+.icon-box i {
+  font-size: 45px;
+  color: #ff3a82;
+}
+
+/* charts */
+.charts {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-gap: 20px;
+  width: 100%;
+  padding-top: 0;
+}
+.chart {
+  background-color: #fff;
+  padding: 1px;
+  border-radius: 10px;
+  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
+  width: 100%;
+}
+.chart h2 {
+  margin-bottom: 5px;
+  font-size: 20px;
+  color: #ff3a82;
+  text-align: center
 }
