--- a/src/app/teacher-router/components/header/header.component.css
+++ b/src/app/teacher-router/components/header/header.component.css
@@ -19,15 +19,13 @@ header{
 #login, #profile{
   display: flex;
 }
-.text{
-  margin-right: .8vw;
-}
 
 .text{
+  margin-right: .8vw;
   text-decoration: none;
   color: white;
   font-size: 1.2vw;
-  margin-top: .8vw;
+  line-height: 2.5;
 }
 
 a:hover{
@@ -63,7 +61,7 @@ img{
     display: none;
   }
   .text{
-    margin-top: 2.5vw;
+    line-height: 2;
     font-size: 5vw;
   }
   #login .text{
