--- a/src/app/teacher-router/pages/teacher-home/teacher-home.component.html
+++ b/src/app/teacher-router/pages/teacher-home/teacher-home.component.html
@@ -1,1 +1,61 @@
-<p>teacher-home works!</p>
+<app-header></app-header>
+
+<mat-stepper #stepper>
+  <mat-step>
+    <div id="main">
+      <h1>Nombre del centro</h1>
+      <p id="arrive-text">Avda Aleatoria nº 20, 35424, Las Palmas</p>
+
+      <div id="app-map">
+        <app-map></app-map>
+      </div>
+
+      <div id="arrive-button">
+        <button>Abrir en maps</button>
+      </div>
+      <div id="buttons">
+        <button> Anterior</button>
+        <button> Siguiente</button>
+      </div>
+
+      <p id="finish">Terminar jornada laboral</p>
+    </div>
+  </mat-step>
+
+  <mat-step>
+    <div id="main">
+      <h1>Nombre del centro</h1>
+      <p id="arrive-text">Avda Aleatoria nº 20, 35424, Las Palmas</p>
+
+      <div id="app-map">
+        <app-map></app-map>
+      </div>
+
+      <div id="arrive-button">
+        <button>Abrir en maps</button>
+      </div>
+      <div id="buttons">
+        <button> Anterior</button>
+        <button> Siguiente</button>
+      </div>
+
+      <p id="finish">Terminar jornada laboral</p>
+    </div>
+
+  </mat-step>
+
+  <mat-step>
+
+  </mat-step>
+
+  <mat-step>
+
+  </mat-step>
+
+  <mat-step>
+
+  </mat-step>
+</mat-stepper>
+
+
+<!-- <app-footer></app-footer> -->
