--- a/src/app/teacher-router/components/map/map.component.html
+++ b/src/app/teacher-router/components/map/map.component.html
@@ -1,1 +1,2 @@
-<p>map works!</p>
+<div class="mapContainer">
+  <img src="../../../../assets/images/google-maps-22.jpg" class="mapContainer img"></div>
