--- a/src/app/auth/pages/login/login.component.css
+++ b/src/app/auth/pages/login/login.component.css
@@ -4,10 +4,12 @@
 
 .full-width {
     width: 100%;
+    padding-top: 10px;
 }
 
 .login-card {
     min-height: 80vh;
+    background-color: rgba(180, 179, 179, 0.663);
     animation: fadein 1s ease-in-out;
 }
 
@@ -17,7 +19,10 @@
     height: 80vh;
 }
 
+
+
 .login-header {
+    padding: 20px;
     font-size: 2.5rem;
     color: #0c1066;
     letter-spacing: 0.2rem;
@@ -67,10 +72,12 @@
     animation: slideright 2s ease-out;
 }
 
-.login-button {
-    font-weight: 100;
-    width: 190px;
-    font-size: 1.1rem;
+#login-button {
+    height: 2.5rem;
+}
+
+#forgot-password-id {
+    margin-top: 10px;
 }
 
 @media screen and (max-width: 959px) {
