--- a/src/app/teacher-router/pages/admin-home/admin-home.component.html
+++ b/src/app/teacher-router/pages/admin-home/admin-home.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div id="main">
   <div class="sidenav-content">
-    <app-admin-sidenav></app-admin-sidenav>
+    <!-- <app-admin-sidenav></app-admin-sidenav> -->
   </div>
   <div class="prueba">
     <div id="center-data">
