--- a/src/app/teacher-router/components/center-label/center-label.component.html
+++ b/src/app/teacher-router/components/center-label/center-label.component.html
@@ -1,4 +1,4 @@
 <div class="rectangle">
-    <p class="smalltext">{{centreName}}</p>
-    <p class="bigtext">{{street}}</p>
+    <p class="bigtext">{{centreName}}</p>
+    <p class="smalltext">{{street}}</p>
 </div>
