login mobile version implemented

--- a/src/app/auth/pages/login/login.component.css
+++ b/src/app/auth/pages/login/login.component.css
@@ -1,5 +1,6 @@
 .container-fluid {
     min-height: 100vh;
+    width: 100%;
 }
 
 .full-width {
@@ -24,14 +25,14 @@
 .login-header {
     padding: 20px;
     font-size: 2.5rem;
-    color: #0c1066;
+    color: #ea4a05;
     letter-spacing: 0.2rem;
     font-weight: bold;
     animation: fadein 1.75s ease-in-out;
 }
 
 .login-form {
-    width: 80%;
+    width: 90%;
 }
 
 .forgot-link {
@@ -80,12 +81,17 @@
     margin-top: 10px;
 }
 
-@media screen and (max-width: 959px) {
-    .login-aside {
-        display: none;
+@media (max-width: 600px) {
+    .login-card {
+        margin-top: 15%;
+        min-width: 85%;
     }
-
-    .container-fluid {
-        width: 100%;
+    
+    .loginImage {
+        display: none;
+        visibility: hidden;
     }
 }
+
+
+
