--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -32,10 +32,11 @@
     </main>
 
   </div>
-  <div class="login-card login-content mat-elevation-z8" fxFlex=45% fxLayout="column" fxLayoutAlign="end start"
+
+  <div class="loginImage login-card login-content mat-elevation-z8" fxFlex=45% fxLayout="column" fxLayoutAlign="end start"
     [ngStyle]="unsplashClass()">
-    <div class="login-aside-overlay"></div>
-    <h1 class="login-welcome-text">Welcome!</h1>
-    <hr class="login-aside-hr">
+    <div class="loginImage login-aside-overlay"></div>
+    <h1 class="loginImage login-welcome-text">Welcome!</h1>
+    <hr class="loginImage login-aside-hr">
   </div>
 </div>
