--- a/src/app/teacher-router/pages/create-user/create-user.component.html
+++ b/src/app/teacher-router/pages/create-user/create-user.component.html
@@ -1,27 +1,48 @@
 <main fxLayout fxLayout.xs="column" fxLayoutAlign="center center">
-    <h1>{{ isEdit ? 'Editar' : 'Crear' }}
-        Profesor
-        <small>{{ teacher.name }}</small>
-    </h1>
 
-    <mat-form-field fxFlex="100">
-        <mat-label>Nombre</mat-label>
-        <input matInput type="text" [(ngModel)]="teacher.name" required>
-    </mat-form-field>
+    <div id="formulario">
+        <h1>{{ isEdit ? 'Editar' : 'Crear' }}
+            Profesor
+            <small>{{ teacher.name }}</small>
+        </h1>
+    
+        <mat-form-field fxFlex="100" class="full-width">
+            <mat-label>Nombre</mat-label>
+            <input matInput type="text" [(ngModel)]="teacher.name" required>
+        </mat-form-field>
+    
+        <mat-form-field fxFlex="1" class="full-width">
+            <mat-label>Correo</mat-label>
+            <input matInput type="email" [(ngModel)]="teacher.email" required>
+        </mat-form-field>
+    
+        <mat-form-field appearance="fill" class="full-width">
+            <mat-label>Contraseña</mat-label>
+            <input matInput [(ngModel)]="teacher.password" required [type]="hide ? 'password' : 'text'">
+            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+              <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </button>
+          </mat-form-field>
 
-    <mat-form-field fxFlex="100">
-        <mat-label>Email</mat-label>
-        <input matInput type="email" [(ngModel)]="teacher.email" required>
-    </mat-form-field>
+        
+        <button class="btn-custom"  mat-raised-button color="primary" (click)="guardar()">
+            <mat-icon>edit</mat-icon>
+            {{ isEdit ? 'Actualizar' : 'Crear' }}
+        </button>
 
-    <mat-form-field>
-        <mat-label>Password</mat-label>
-        <input matInput type="password" [(ngModel)]="teacher.password" required>
-    </mat-form-field>
+        <span class="spacer"></span>
+
+        <button *ngIf="isEdit" mat-raised-button color="warn" (click)="borrar()">
+            <mat-icon>remove</mat-icon>
+            Borrar
+        </button>
+        
+    </div>
+    
 
 
 
-    <mat-form-field appearance="fill">
+    <!-- <mat-form-field appearance="fill">
         <mat-label>Enter a date range</mat-label>
         <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
             <input matStartDate formControlName="start" placeholder="Start date">
@@ -36,25 +57,7 @@
         <mat-error *ngIf="range.controls['lunes'].hasError('matStartDateInvalid')">Invalid start date</mat-error>
         <mat-error *ngIf="range.controls['sabado'].hasError('matEndDateInvalid')">Invalid end date</mat-error>
 
-    </mat-form-field>
-
-
-    <p>Selected range: {{range.value | json}}</p>
-
-    <br>
-
-    <div fxLayout>
-        <button mat-raised-button color="primary" (click)="guardar()">
-            <mat-icon>edit</mat-icon>
-            {{ isEdit ? 'Actualizar' : 'Crear' }}
-        </button>
-
-        <span class="spacer"></span>
-
-        <button *ngIf="isEdit" mat-raised-button color="warn" (click)="borrar()">
-            <mat-icon>remove</mat-icon>
-            Borrar
-        </button>
-    </div>
+        <p>Selected range: {{range.value | json}}</p>
+    </mat-form-field> -->
 
 </main>
