Cambios en el sidenav

--- a/src/app/teacher-router/components/center-label/center-label.component.html
+++ b/src/app/teacher-router/components/center-label/center-label.component.html
@@ -1,4 +1,4 @@
-<div class="rectangle">
+<div class="rectangle" [ngClass]="">
     <p class="bigtext">{{centreName}}</p>
     <p class="smalltext">{{street}}</p>
 </div>
