--- a/src/app/teacher-router/pages/route-manager/route-manager.component.html
+++ b/src/app/teacher-router/pages/route-manager/route-manager.component.html
@@ -1,16 +1,11 @@
-<<<<<<< HEAD
-<app-header></app-header>
+<app-header #header></app-header>
+
 <div class="menu-container">
-    <mat-form-field appearance="outline" class="full-width">    
-    <button mat-raised-button color="blue" type="submit" >Buscar</button>
+    <mat-form-field appearance="outline" class="full-width">
+    <button mat-raised-button color="blue" type="submit">Buscar</button>
 </div>
+
 <div class="menu-container">
-    <app-map></app-map> 
-    <button mat-raised-button color="blue" type="submit" >Siguiente</button>
-=======
-<div class="container-fluid"
-fxLayout>
-
-
->>>>>>> 6c973a29b52bb4398fdafcd7bdaa6f777e1003d1
+    <app-map></app-map>
+    <button mat-raised-button color="blue" type="submit">Siguiente</button>
 </div>
