--- a/src/app/teacher-router/pages/teacher-home/teacher-home.component.css
+++ b/src/app/teacher-router/pages/teacher-home/teacher-home.component.css
@@ -1,6 +1,7 @@
 map-steppper{
   width: 100vw;
   padding:0;
+
 }
 
 map-stepper map-step{
@@ -15,7 +16,7 @@ map-stepper map-step{
 
 #main{
   width: 90vw;
-  height: 92.5vh;
+  height: 100%;
   margin: 0 auto 0 auto;
 }
 
@@ -26,22 +27,24 @@ map-stepper map-step{
 }
 h1{
   text-align: center;
-  margin: 2% auto auto 0;
+  margin: 2vh auto auto 0;
 }
 
 #app-map{
   border: 2px solid #373737;
-  height: 50vh;
+  height: 45vh;
   border-radius: 20px;
 }
 
 #arrive-button{
   width: 50%;
-  margin: 5% auto;
+  margin: 1% auto;
+  display: flex;
 }
 
 #arrive-button button{
-  width: 100%;
+  margin: auto;
+  width: 71%;
   background-color: transparent;
   border: 2px solid #373737;
   border-radius: 8px;
@@ -49,8 +52,7 @@ h1{
 }
 
 #buttons{
-  margin: 5% auto;
-
+  margin: 2vh auto;
   display: flex;
   justify-content: space-between;
 }
@@ -62,11 +64,22 @@ h1{
 }
 
 #finish{
-  width: 70%;
+  width: 35%;
   background-color: #F57E7A;
   text-align: center;
-  margin: 5% auto 0 auto;
+  margin: 2vh auto 0 auto;
   padding: 1.5vh 0;
   border: 2px solid #373737;
   border-radius: 10px;
+}
+
+@media screen and (max-width: 600px){
+
+  #arrive-button button{
+    width: 100%;
+  }
+  #finish{
+    width: 60%;
+  }
+
 }
