--- a/src/app/teacher-router/components/header/header.component.html
+++ b/src/app/teacher-router/components/header/header.component.html
@@ -18,17 +18,11 @@
 
 <header *ngIf="header_Logged">
 
-  <button (click)="toggleSidenav()" *ngIf="getCurrentRoute() !== '/route-manager'" mat-button>
+  <button (click)="isAdmin() ? toggleSidenav() : toggleVisitorSidenav()" mat-button>
     <mat-icon fontIcon="menu"></mat-icon>
   </button>
-
-  <button (click)="toggleVisitorSidenav()" *ngIf="getCurrentRoute() === '/route-manager'" mat-button>
-    <mat-icon fontIcon="menu"></mat-icon>
-  </button>
-
+  
   <div id="header_elements">
-
-
     <div id="teacher_elements">
 
 
