--- a/documentation/components/CenterLabelComponent.html
+++ b/documentation/components/CenterLabelComponent.html
@@ -38,7 +38,7 @@
   <li>Components</li>
   <li
   >
-  AppComponent</li>
+  CenterLabelComponent</li>
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
@@ -64,7 +64,7 @@
     <h3>File</h3>
 </p>
 <p class="comment">
-    <code>src/app/app.component.ts</code>
+    <code>src/app/teacher-router/components/center-label/center-label.component.ts</code>
 </p>
 
 
@@ -89,19 +89,19 @@
 
             <tr>
                 <td class="col-md-3">selector</td>
-                <td class="col-md-9"><code>app-root</code></td>
+                <td class="col-md-9"><code>app-center-label</code></td>
             </tr>
 
             <tr>
                 <td class="col-md-3">styleUrls</td>
-                <td class="col-md-9"><code>./app.component.css</code></td>
+                <td class="col-md-9"><code>./center-label.component.css</code></td>
             </tr>
 
 
 
             <tr>
                 <td class="col-md-3">templateUrl</td>
-                <td class="col-md-9"><code>./app.component.html</code></td>
+                <td class="col-md-9"><code>./center-label.component.html</code></td>
             </tr>
 
 
@@ -119,16 +119,21 @@
     <h3 id="index">Index</h3>
     <table class="table table-sm table-bordered index-table">
         <tbody>
+
+
                 <tr>
                     <td class="col-md-4">
-                        <h6><b>Properties</b></h6>
+                        <h6><b>Inputs</b></h6>
                     </td>
                 </tr>
                 <tr>
                     <td class="col-md-4">
                         <ul class="index-list">
                             <li>
-                                <a href="#title" >title</a>
+                                <a href="#centreName" >centreName</a>
+                            </li>
+                            <li>
+                                <a href="#street" >street</a>
                             </li>
                         </ul>
                     </td>
@@ -137,85 +142,125 @@
 
 
 
-
-
         </tbody>
     </table>
 </section>
 
 
-
-
-
-
-
     <section>
-    
-    <h3 id="inputs">
-        Properties
-    </h3>
-    <table class="table table-sm table-bordered">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
-                    <a name="title"></a>
-                    <span class="name">
-                        <span ><b>title</b></span>
-                        <a href="#title"><span class="icon ion-ios-link"></span></a>
-                    </span>
-                </td>
-            </tr>
+    <h3 id="inputs">Inputs</h3>
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <a name="centreName"></a>
+                        <b>centreName</b>
+                    </td>
+                </tr>
                 <tr>
                     <td class="col-md-4">
                         <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
 
                     </td>
                 </tr>
+                        <tr>
+                            <td class="col-md-2" colspan="2">
+                                    <div class="io-line">Defined in <a href="" data-line="9" class="link-to-prism">src/app/teacher-router/components/center-label/center-label.component.ts:9</a></div>
+                            </td>
+                        </tr>
+            </tbody>
+        </table>
+        <table class="table table-sm table-bordered">
+            <tbody>
                 <tr>
                     <td class="col-md-4">
-                        <i>Default value : </i><code>&#x27;teacherRouter&#x27;</code>
+                        <a name="street"></a>
+                        <b>street</b>
                     </td>
                 </tr>
-                    <tr>
-                        <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="9" class="link-to-prism">src/app/app.component.ts:9</a></div>
-                        </td>
-                    </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
 
-
-        </tbody>
-    </table>
+                    </td>
+                </tr>
+                        <tr>
+                            <td class="col-md-2" colspan="2">
+                                    <div class="io-line">Defined in <a href="" data-line="10" class="link-to-prism">src/app/teacher-router/components/center-label/center-label.component.ts:10</a></div>
+                            </td>
+                        </tr>
+            </tbody>
+        </table>
 </section>
+
+
+
+
 
 </div>
 
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component } from &#x27;@angular/core&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component,Input } from &#x27;@angular/core&#x27;;
 
 @Component({
-  selector: &#x27;app-root&#x27;,
-  templateUrl: &#x27;./app.component.html&#x27;,
-  styleUrls: [&#x27;./app.component.css&#x27;]
+  selector: &#x27;app-center-label&#x27;,
+  templateUrl: &#x27;./center-label.component.html&#x27;,
+  styleUrls: [&#x27;./center-label.component.css&#x27;]
 })
-export class AppComponent {
-  title &#x3D; &#x27;teacherRouter&#x27;;
+export class CenterLabelComponent {
+ @Input() centreName!:string;
+ @Input() street!:string;
 }
 </code></pre>
     </div>
 
     <div class="tab-pane fade " id="c-templateData">
-        <pre class="line-numbers"><code class="language-html">&lt;div&gt;
-  &lt;router-outlet&gt;&lt;/router-outlet&gt;
+        <pre class="line-numbers"><code class="language-html">&lt;div class&#x3D;&quot;rectangle&quot;&gt;
+    &lt;p class&#x3D;&quot;bigtext&quot;&gt;{{centreName}}&lt;/p&gt;
+    &lt;p class&#x3D;&quot;smalltext&quot;&gt;{{street}}&lt;/p&gt;
 &lt;/div&gt;
 </code></pre>
     </div>
 
     <div class="tab-pane fade " id="c-styleData">
                 <p class="comment">
-                    <code>./app.component.css</code>
+                    <code>./center-label.component.css</code>
                 </p>
-                <pre class="line-numbers"><code class="language-scss"></code></pre>
+                <pre class="line-numbers"><code class="language-scss">.rectangle {
+ width: 100%;
+ height: 2 rem;
+ align-items: first baseline;
+ background-color: rgb(197, 194, 194);
+ color: gray;
+ font-family: Arial, Helvetica, sans-serif;
+}
+
+.bigtext {
+ font-size: 50%;
+}
+
+.smalltext {
+ font-size: 20%;
+}
+
+.rectangleBlue {
+    width: 100%;
+    height: 2 rem;
+    align-items: first baseline;
+    background-color: rgb(48, 52, 240);
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.rectangleLightBlue {
+    width: 100%;
+    height: 2 rem;
+    align-items: first baseline;
+    background-color: rgb(48, 163, 240);
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}</code></pre>
     </div>
 
     <div class="tab-pane fade " id="c-tree">
@@ -243,10 +288,10 @@ export class AppComponent {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><div>  <router-outlet></router-outlet></div></div>'
+        var COMPONENT_TEMPLATE = '<div><div class="rectangle">    <p class="bigtext">{{centreName}}</p>    <p class="smalltext">{{street}}</p></div></div>'
     var COMPONENTS = [{'name': 'AdminHomeComponent', 'selector': 'app-admin-home'},{'name': 'AdminMenuComponent', 'selector': 'app-admin-menu'},{'name': 'AdminSidenavComponent', 'selector': 'app-admin-sidenav'},{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'CenterLabelComponent', 'selector': 'app-center-label'},{'name': 'CenterManagerComponent', 'selector': 'app-center-manager'},{'name': 'CreateUserComponent', 'selector': 'app-create-user'},{'name': 'FooterComponent', 'selector': 'app-footer'},{'name': 'HeaderComponent', 'selector': 'app-header'},{'name': 'ItemsManagerComponent', 'selector': 'app-items-manager'},{'name': 'LoginComponent', 'selector': 'app-login'},{'name': 'MapComponent', 'selector': 'app-map'},{'name': 'RouteManagerComponent', 'selector': 'app-route-manager'},{'name': 'TeacherHomeComponent', 'selector': 'app-teacher-home'},{'name': 'UserManagerComponent', 'selector': 'app-user-manager'},{'name': 'VisitorSidenavComponent', 'selector': 'app-visitor-sidenav'}];
     var DIRECTIVES = [];
-    var ACTUAL_COMPONENT = {'name': 'AppComponent'};
+    var ACTUAL_COMPONENT = {'name': 'CenterLabelComponent'};
 </script>
 <script src="../js/tree.js"></script>
 
@@ -292,7 +337,7 @@ export class AppComponent {
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'component';
-            var COMPODOC_CURRENT_PAGE_URL = 'AppComponent.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'CenterLabelComponent.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
