--- a/documentation/components/TeacherHomeComponent.html
+++ b/documentation/components/TeacherHomeComponent.html
@@ -38,7 +38,7 @@
   <li>Components</li>
   <li
   >
-  AppComponent</li>
+  TeacherHomeComponent</li>
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
@@ -64,7 +64,7 @@
     <h3>File</h3>
 </p>
 <p class="comment">
-    <code>src/app/app.component.ts</code>
+    <code>src/app/teacher-router/pages/teacher-home/teacher-home.component.ts</code>
 </p>
 
 
@@ -89,19 +89,19 @@
 
             <tr>
                 <td class="col-md-3">selector</td>
-                <td class="col-md-9"><code>app-root</code></td>
+                <td class="col-md-9"><code>app-teacher-home</code></td>
             </tr>
 
             <tr>
                 <td class="col-md-3">styleUrls</td>
-                <td class="col-md-9"><code>./app.component.css</code></td>
+                <td class="col-md-9"><code>./teacher-home.component.css</code></td>
             </tr>
 
 
 
             <tr>
                 <td class="col-md-3">templateUrl</td>
-                <td class="col-md-9"><code>./app.component.html</code></td>
+                <td class="col-md-9"><code>./teacher-home.component.html</code></td>
             </tr>
 
 
@@ -115,33 +115,6 @@
     </table>
 </section>
 
-    <section>
-    <h3 id="index">Index</h3>
-    <table class="table table-sm table-bordered index-table">
-        <tbody>
-                <tr>
-                    <td class="col-md-4">
-                        <h6><b>Properties</b></h6>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <ul class="index-list">
-                            <li>
-                                <a href="#title" >title</a>
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
-
-
-
-
-
-
-        </tbody>
-    </table>
-</section>
 
 
 
@@ -149,43 +122,6 @@
 
 
 
-    <section>
-    
-    <h3 id="inputs">
-        Properties
-    </h3>
-    <table class="table table-sm table-bordered">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
-                    <a name="title"></a>
-                    <span class="name">
-                        <span ><b>title</b></span>
-                        <a href="#title"><span class="icon ion-ios-link"></span></a>
-                    </span>
-                </td>
-            </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
-
-                    </td>
-                </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <i>Default value : </i><code>&#x27;teacherRouter&#x27;</code>
-                    </td>
-                </tr>
-                    <tr>
-                        <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="9" class="link-to-prism">src/app/app.component.ts:9</a></div>
-                        </td>
-                    </tr>
-
-
-        </tbody>
-    </table>
-</section>
 
 </div>
 
@@ -194,28 +130,158 @@
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component } from &#x27;@angular/core&#x27;;
 
 @Component({
-  selector: &#x27;app-root&#x27;,
-  templateUrl: &#x27;./app.component.html&#x27;,
-  styleUrls: [&#x27;./app.component.css&#x27;]
+  selector: &#x27;app-teacher-home&#x27;,
+  templateUrl: &#x27;./teacher-home.component.html&#x27;,
+  styleUrls: [&#x27;./teacher-home.component.css&#x27;]
 })
-export class AppComponent {
-  title &#x3D; &#x27;teacherRouter&#x27;;
+export class TeacherHomeComponent {
+
 }
 </code></pre>
     </div>
 
     <div class="tab-pane fade " id="c-templateData">
-        <pre class="line-numbers"><code class="language-html">&lt;div&gt;
-  &lt;router-outlet&gt;&lt;/router-outlet&gt;
-&lt;/div&gt;
+        <pre class="line-numbers"><code class="language-html">&lt;app-header&gt;&lt;/app-header&gt;
+
+&lt;mat-stepper #stepper&gt;
+  &lt;mat-step&gt;
+    &lt;div id&#x3D;&quot;main&quot;&gt;
+      &lt;h1&gt;Nombre del centro&lt;/h1&gt;
+      &lt;p id&#x3D;&quot;arrive-text&quot;&gt;Avda Aleatoria nº 20, 35424, Las Palmas&lt;/p&gt;
+
+      &lt;div id&#x3D;&quot;app-map&quot;&gt;
+        &lt;app-map&gt;&lt;/app-map&gt;
+      &lt;/div&gt;
+
+      &lt;div id&#x3D;&quot;arrive-button&quot;&gt;
+        &lt;button&gt;Abrir en maps&lt;/button&gt;
+      &lt;/div&gt;
+      &lt;div id&#x3D;&quot;buttons&quot;&gt;
+        &lt;button&gt; Anterior&lt;/button&gt;
+        &lt;button&gt; Siguiente&lt;/button&gt;
+      &lt;/div&gt;
+
+      &lt;p id&#x3D;&quot;finish&quot;&gt;Terminar jornada laboral&lt;/p&gt;
+    &lt;/div&gt;
+  &lt;/mat-step&gt;
+
+  &lt;mat-step&gt;
+    &lt;div id&#x3D;&quot;main&quot;&gt;
+      &lt;h1&gt;Nombre del centro&lt;/h1&gt;
+      &lt;p id&#x3D;&quot;arrive-text&quot;&gt;Avda Aleatoria nº 20, 35424, Las Palmas&lt;/p&gt;
+
+      &lt;div id&#x3D;&quot;app-map&quot;&gt;
+        &lt;app-map&gt;&lt;/app-map&gt;
+      &lt;/div&gt;
+
+      &lt;div id&#x3D;&quot;arrive-button&quot;&gt;
+        &lt;button&gt;Abrir en maps&lt;/button&gt;
+      &lt;/div&gt;
+      &lt;div id&#x3D;&quot;buttons&quot;&gt;
+        &lt;button&gt; Anterior&lt;/button&gt;
+        &lt;button&gt; Siguiente&lt;/button&gt;
+      &lt;/div&gt;
+
+      &lt;p id&#x3D;&quot;finish&quot;&gt;Terminar jornada laboral&lt;/p&gt;
+    &lt;/div&gt;
+
+  &lt;/mat-step&gt;
+
+  &lt;mat-step&gt;
+
+  &lt;/mat-step&gt;
+
+  &lt;mat-step&gt;
+
+  &lt;/mat-step&gt;
+
+  &lt;mat-step&gt;
+
+  &lt;/mat-step&gt;
+&lt;/mat-stepper&gt;
+
+
+&lt;!-- &lt;app-footer&gt;&lt;/app-footer&gt; --&gt;
 </code></pre>
     </div>
 
     <div class="tab-pane fade " id="c-styleData">
                 <p class="comment">
-                    <code>./app.component.css</code>
+                    <code>./teacher-home.component.css</code>
                 </p>
-                <pre class="line-numbers"><code class="language-scss"></code></pre>
+                <pre class="line-numbers"><code class="language-scss">map-steppper{
+  width: 100vw;
+  padding:0;
+}
+
+map-stepper map-step{
+  width: 95vw;
+  padding: 0;
+}
+
+:host ::ng-deep .mat-horizontal-content-container {
+  padding:0 !important;
+  background-color: #F4F2EF;
+}
+
+#main{
+  width: 90vw;
+  height: 92.5vh;
+  margin: 0 auto 0 auto;
+}
+
+#arrive-text{
+  border: 2px solid #373737;
+  padding: 1vh 1vw;
+  border-radius: 10px;
+}
+h1{
+  text-align: center;
+  margin: 2% auto auto 0;
+}
+
+#app-map{
+  border: 2px solid #373737;
+  height: 50vh;
+  border-radius: 20px;
+}
+
+#arrive-button{
+  width: 50%;
+  margin: 5% auto;
+}
+
+#arrive-button button{
+  width: 100%;
+  background-color: transparent;
+  border: 2px solid #373737;
+  border-radius: 8px;
+  padding: 1vh 1vw;
+}
+
+#buttons{
+  margin: 5% auto;
+
+  display: flex;
+  justify-content: space-between;
+}
+#buttons button{
+  background-color: #7596F5;
+  padding: 1vh 6vw;
+  border: 2px solid #373737;
+  border-radius: 12px;
+}
+
+#finish{
+  width: 70%;
+  background-color: #F57E7A;
+  text-align: center;
+  margin: 5% auto 0 auto;
+  padding: 1.5vh 0;
+  border: 2px solid #373737;
+  border-radius: 10px;
+}
+</code></pre>
     </div>
 
     <div class="tab-pane fade " id="c-tree">
@@ -243,10 +309,10 @@ export class AppComponent {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><div>  <router-outlet></router-outlet></div></div>'
+        var COMPONENT_TEMPLATE = '<div><app-header></app-header><mat-stepper #stepper>  <mat-step>    <div id="main">      <h1>Nombre del centro</h1>      <p id="arrive-text">Avda Aleatoria nº 20, 35424, Las Palmas</p>      <div id="app-map">        <app-map></app-map>      </div>      <div id="arrive-button">        <button>Abrir en maps</button>      </div>      <div id="buttons">        <button> Anterior</button>        <button> Siguiente</button>      </div>      <p id="finish">Terminar jornada laboral</p>    </div>  </mat-step>  <mat-step>    <div id="main">      <h1>Nombre del centro</h1>      <p id="arrive-text">Avda Aleatoria nº 20, 35424, Las Palmas</p>      <div id="app-map">        <app-map></app-map>      </div>      <div id="arrive-button">        <button>Abrir en maps</button>      </div>      <div id="buttons">        <button> Anterior</button>        <button> Siguiente</button>      </div>      <p id="finish">Terminar jornada laboral</p>    </div>  </mat-step>  <mat-step>  </mat-step>  <mat-step>  </mat-step>  <mat-step>  </mat-step></mat-stepper><!-- <app-footer></app-footer> --></div>'
     var COMPONENTS = [{'name': 'AdminHomeComponent', 'selector': 'app-admin-home'},{'name': 'AdminMenuComponent', 'selector': 'app-admin-menu'},{'name': 'AdminSidenavComponent', 'selector': 'app-admin-sidenav'},{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'CenterLabelComponent', 'selector': 'app-center-label'},{'name': 'CenterManagerComponent', 'selector': 'app-center-manager'},{'name': 'CreateUserComponent', 'selector': 'app-create-user'},{'name': 'FooterComponent', 'selector': 'app-footer'},{'name': 'HeaderComponent', 'selector': 'app-header'},{'name': 'ItemsManagerComponent', 'selector': 'app-items-manager'},{'name': 'LoginComponent', 'selector': 'app-login'},{'name': 'MapComponent', 'selector': 'app-map'},{'name': 'RouteManagerComponent', 'selector': 'app-route-manager'},{'name': 'TeacherHomeComponent', 'selector': 'app-teacher-home'},{'name': 'UserManagerComponent', 'selector': 'app-user-manager'},{'name': 'VisitorSidenavComponent', 'selector': 'app-visitor-sidenav'}];
     var DIRECTIVES = [];
-    var ACTUAL_COMPONENT = {'name': 'AppComponent'};
+    var ACTUAL_COMPONENT = {'name': 'TeacherHomeComponent'};
 </script>
 <script src="../js/tree.js"></script>
 
@@ -292,7 +358,7 @@ export class AppComponent {
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'component';
-            var COMPODOC_CURRENT_PAGE_URL = 'AppComponent.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'TeacherHomeComponent.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
