--- a/documentation/components/VisitorSidenavComponent.html
+++ b/documentation/components/VisitorSidenavComponent.html
@@ -38,7 +38,7 @@
   <li>Components</li>
   <li
   >
-  AppComponent</li>
+  VisitorSidenavComponent</li>
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
@@ -64,7 +64,7 @@
     <h3>File</h3>
 </p>
 <p class="comment">
-    <code>src/app/app.component.ts</code>
+    <code>src/app/teacher-router/components/visitor-sidenav/visitor-sidenav.component.ts</code>
 </p>
 
 
@@ -89,19 +89,19 @@
 
             <tr>
                 <td class="col-md-3">selector</td>
-                <td class="col-md-9"><code>app-root</code></td>
+                <td class="col-md-9"><code>app-visitor-sidenav</code></td>
             </tr>
 
             <tr>
                 <td class="col-md-3">styleUrls</td>
-                <td class="col-md-9"><code>./app.component.css</code></td>
+                <td class="col-md-9"><code>./visitor-sidenav.component.css</code></td>
             </tr>
 
 
 
             <tr>
                 <td class="col-md-3">templateUrl</td>
-                <td class="col-md-9"><code>./app.component.html</code></td>
+                <td class="col-md-9"><code>./visitor-sidenav.component.html</code></td>
             </tr>
 
 
@@ -128,7 +128,7 @@
                     <td class="col-md-4">
                         <ul class="index-list">
                             <li>
-                                <a href="#title" >title</a>
+                                <a href="#centres" >centres</a>
                             </li>
                         </ul>
                     </td>
@@ -143,6 +143,24 @@
     </table>
 </section>
 
+    <section>
+    <h3 id="constructor">Constructor</h3>
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+<code>constructor()</code>
+                    </td>
+                </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                <div class="io-line">Defined in <a href="" data-line="10" class="link-to-prism">src/app/teacher-router/components/visitor-sidenav/visitor-sidenav.component.ts:10</a></div>
+                            </td>
+                        </tr>
+
+            </tbody>
+        </table>
+</section>
 
 
 
@@ -158,27 +176,22 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="title"></a>
+                    <a name="centres"></a>
                     <span class="name">
-                        <span ><b>title</b></span>
-                        <a href="#title"><span class="icon ion-ios-link"></span></a>
+                        <span ><b>centres</b></span>
+                        <a href="#centres"><span class="icon ion-ios-link"></span></a>
                     </span>
                 </td>
             </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                        <i>Type : </i>    <code>any[]</code>
 
-                    </td>
-                </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <i>Default value : </i><code>&#x27;teacherRouter&#x27;</code>
                     </td>
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="9" class="link-to-prism">src/app/app.component.ts:9</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="10" class="link-to-prism">src/app/teacher-router/components/visitor-sidenav/visitor-sidenav.component.ts:10</a></div>
                         </td>
                     </tr>
 
@@ -194,28 +207,41 @@
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component } from &#x27;@angular/core&#x27;;
 
 @Component({
-  selector: &#x27;app-root&#x27;,
-  templateUrl: &#x27;./app.component.html&#x27;,
-  styleUrls: [&#x27;./app.component.css&#x27;]
+  selector: &#x27;app-visitor-sidenav&#x27;,
+  templateUrl: &#x27;./visitor-sidenav.component.html&#x27;,
+  styleUrls: [&#x27;./visitor-sidenav.component.css&#x27;]
 })
-export class AppComponent {
-  title &#x3D; &#x27;teacherRouter&#x27;;
+export class VisitorSidenavComponent {
+
+  centres: any[]
+
+  constructor() {
+    this.centres &#x3D; [{ centreName: &#x27;Colegio San Juan&#x27;, street: &#x27;Calle Mayor 12&#x27; }, { centreName: &#x27;Instituto Montes&#x27;, street: &#x27;Avenida de la Constitución 25&#x27; }, { centreName: &#x27;Escuela Nuestra Señora&#x27;, street: &#x27;Calle del Sol 8&#x27; }];
+
+  }
 }
 </code></pre>
     </div>
 
     <div class="tab-pane fade " id="c-templateData">
-        <pre class="line-numbers"><code class="language-html">&lt;div&gt;
-  &lt;router-outlet&gt;&lt;/router-outlet&gt;
-&lt;/div&gt;
-</code></pre>
+        <pre class="line-numbers"><code class="language-html">&lt;mat-sidenav #sidenav mode&#x3D;&quot;side&quot; opened autosize&#x3D;&quot;true&quot;&gt;
+    &lt;ng-container *ngFor&#x3D;&quot;let centro in centres&quot;&gt;
+        &lt;app-center-label [centreName]&#x3D;&quot;centro.centreName&quot; [street]&#x3D;&quot;centro.street&quot;&gt;&lt;/app-center-label&gt;
+    &lt;/ng-container&gt;
+&lt;/mat-sidenav&gt;</code></pre>
     </div>
 
     <div class="tab-pane fade " id="c-styleData">
                 <p class="comment">
-                    <code>./app.component.css</code>
+                    <code>./visitor-sidenav.component.css</code>
                 </p>
-                <pre class="line-numbers"><code class="language-scss"></code></pre>
+                <pre class="line-numbers"><code class="language-scss">.container {
+    display: flex;
+    flex-grow: inherit;
+    flex-wrap: wrap;
+    align-items: center;
+    scroll-behavior: smooth;
+}</code></pre>
     </div>
 
     <div class="tab-pane fade " id="c-tree">
@@ -243,10 +269,10 @@ export class AppComponent {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><div>  <router-outlet></router-outlet></div></div>'
+        var COMPONENT_TEMPLATE = '<div><mat-sidenav #sidenav mode="side" opened autosize="true">    <ng-container *ngFor="let centro in centres">        <app-center-label [centreName]="centro.centreName" [street]="centro.street"></app-center-label>    </ng-container></mat-sidenav></div>'
     var COMPONENTS = [{'name': 'AdminHomeComponent', 'selector': 'app-admin-home'},{'name': 'AdminMenuComponent', 'selector': 'app-admin-menu'},{'name': 'AdminSidenavComponent', 'selector': 'app-admin-sidenav'},{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'CenterLabelComponent', 'selector': 'app-center-label'},{'name': 'CenterManagerComponent', 'selector': 'app-center-manager'},{'name': 'CreateUserComponent', 'selector': 'app-create-user'},{'name': 'FooterComponent', 'selector': 'app-footer'},{'name': 'HeaderComponent', 'selector': 'app-header'},{'name': 'ItemsManagerComponent', 'selector': 'app-items-manager'},{'name': 'LoginComponent', 'selector': 'app-login'},{'name': 'MapComponent', 'selector': 'app-map'},{'name': 'RouteManagerComponent', 'selector': 'app-route-manager'},{'name': 'TeacherHomeComponent', 'selector': 'app-teacher-home'},{'name': 'UserManagerComponent', 'selector': 'app-user-manager'},{'name': 'VisitorSidenavComponent', 'selector': 'app-visitor-sidenav'}];
     var DIRECTIVES = [];
-    var ACTUAL_COMPONENT = {'name': 'AppComponent'};
+    var ACTUAL_COMPONENT = {'name': 'VisitorSidenavComponent'};
 </script>
 <script src="../js/tree.js"></script>
 
@@ -292,7 +318,7 @@ export class AppComponent {
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'component';
-            var COMPODOC_CURRENT_PAGE_URL = 'AppComponent.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'VisitorSidenavComponent.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
