Sidenav de Centros terminada,pendiente de probar

--- a/src/app/teacher-router/pages/route-manager/route-manager.component.html
+++ b/src/app/teacher-router/pages/route-manager/route-manager.component.html
@@ -1,4 +1,4 @@
-<app-header #header></app-header>
+<app-header></app-header>
 
 <div class="menu-container">
     <mat-form-field appearance="outline" class="full-width">
@@ -7,5 +7,5 @@
 
 <div class="menu-container">
     <app-map></app-map>
-    <button mat-raised-button color="blue" type="submit">Siguiente</button>
+    <button mat-raised-button color="blue" type="submit" (click)="siguiente()">Siguiente</button>
 </div>
