--- a/src/app/teacher-router/pages/route-manager/route-manager.component.html
+++ b/src/app/teacher-router/pages/route-manager/route-manager.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 
 <div class="menu-container">
-    <mat-form-field appearance="outline" class="full-width">
-    <button mat-raised-button color="blue" type="submit">Buscar</button>
+  <mat-form-field appearance="outline" class="full-width"></mat-form-field>
+  <button mat-raised-button color="blue" type="submit">Buscar</button>
 </div>
 
 <div class="menu-container">
