--- a/src/styles.css
+++ b/src/styles.css
@@ -6,5 +6,5 @@ html, body {
 body{
   font-family: 'Inter', sans-serif;
   margin: 0;
-  background-color: #F4F2EF;
+  background-color: #d9edf7;
 }
