--- a/src/app/teacher-router/pages/user-manager/user-manager.component.css
+++ b/src/app/teacher-router/pages/user-manager/user-manager.component.css
@@ -1,6 +1,5 @@
 .main-box {
   display: flex;
-  background-color: aqua;
   height: 89.7vh;
 }
 
@@ -79,3 +78,15 @@ table th {
   background-color: lightblue !important;
 }
 
+#search {
+  width: 100%;
+}
+
+.mat-table {
+  border-radius: 10px;
+  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
+}
+
+.header-cell {
+  box-shadow: 0px 0px 0px 0px rgba(255, 0, 0, 0.08) !important;
+}
