--- a/src/app/teacher-router/pages/user-manager/user-manager.component.html
+++ b/src/app/teacher-router/pages/user-manager/user-manager.component.html
@@ -10,19 +10,24 @@
 
       <!-- Name Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <th mat-header-cell *matHeaderCellDef class="header-cell"> Name </th>
+        ma
         <td mat-cell *matCellDef="let user"> {{user.name}} </td>
       </ng-container>
 
       <!-- Admin Column -->
       <ng-container matColumnDef="isAdmin">
-        <th mat-header-cell *matHeaderCellDef> Admin </th>
+        <th mat-header-cell *matHeaderCellDef class="header-cell"> Admin </th>
         <td mat-cell *matCellDef="let user"> {{user.isAdmin}} </td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns" class="header-cell"></tr>
       <tr class="rows" mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selectRow(row)" [ngClass]="{'selectedRow': row === selectedRow}">
     </table>
+    <mat-paginator pageSize="6"
+                   showFirstLastButtons
+                   aria-label="Select user">
+    </mat-paginator>
 
   </div>
   <div class="user-data-box">
