--- a/src/app/teacher-router/pages/center-manager/center-manager.component.css
+++ b/src/app/teacher-router/pages/center-manager/center-manager.component.css
@@ -47,6 +47,7 @@
 
 .search,
 .centers-list {
+  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
   font-size: 1.2vw;
   border: 2px solid #373737;
   border-radius: 0.5vw;
@@ -70,6 +71,7 @@
   border: 2px solid black;
   border-radius: 5px;
   background-color: transparent;
+  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.30);
 }
 .delete:hover {
   background-color: wheat;
@@ -89,6 +91,7 @@
   justify-content: space-between;
 }
 .center-data {
+  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.2);
   font-size: 1.2vw;
   border-radius: 0.5vw;
   width: 100%;
@@ -105,6 +108,7 @@
 }
 
 .data-buttons button {
+  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.2);
   font-size: 1.2vw;
   border-radius: 0.5vw;
   width: 60%;
