--- a/src/app/teacher-router/components/map/map.component.css
+++ b/src/app/teacher-router/components/map/map.component.css
@@ -4,10 +4,11 @@
   border-radius: 20px;
 }
 
-.mapContainer img {
+#map {
   height: 100%;
   width: 100%;
   object-fit: cover;
+  border-radius: inherit;
 }
 
 
